@@ -33,6 +33,7 @@ t/prologue.t
 t/number.t
 t/offset.t
 t/reset.t
+t/separators.t
 t/stdin_compressed.t
 t/stdin_uncompressed.t
 t/speed.pl
@@ -45,6 +46,7 @@ t/mailboxes/mailarc-2.txt.bz2
 t/mailboxes/mailarc-2.txt.tz
 t/mailboxes/mailarc-3.txt
 t/mailboxes/mailseparators.txt
+t/mailboxes/separators1.sep
 t/mailboxes/newlines_at_beginning.txt
 #t/mailboxes/mailbox with space.txt
 #t/mailboxes/mailbox with space.txt.gz
@@ -100,14 +102,14 @@ t/results/reset_newlines_at_beginning.stdout
 #t/results/reset_mailbox with space.stdout
 
 # Module::Install extensions
+inc/Algorithm/Diff.pm
 inc/ExtUtils/AutoInstall.pm
-inc/File/HomeDir.pm
+inc/File/Glob.pm
 inc/File/Spec.pm
 inc/File/Spec/Unix.pm
 inc/Module/Install/AutoInstall.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
-inc/Module/Install/CustomInstallationPath.pm
 inc/Module/Install/Fetch.pm
 inc/Module/Install/GetProgramLocations.pm
 inc/Module/Install/Include.pm
@@ -120,5 +122,6 @@ inc/Scalar/Util.pm
 inc/Sort/Versions.pm
 inc/Test/Builder.pm
 inc/Test/More.pm
+inc/Text/Diff.pm
 
 META.yml
