@@ -38,25 +38,26 @@ distribution and type the following:
   make test
   make install
 
-You will be prompted for installation locations and program locations. You can
-suppress these prompts by specifying:
+You can install this package into a non-default location by appending one of
+the following to the "perl Makefile.PL" command:
 
-- either "PREFIX=/installation/path" (for installation into a custom
-  location), "INSTALLDIRS=site" (for installation into site-specific Perl
-  directories), or "INSTALLDIRS=perl" (for installation into standard Perl
-  directories).
-- the path to one or more external programs. For example, "GREP=/gnu/bin/grep
-  TZIP= GZIP=/gnu/bin/gzip BZIP=/bin/bzip2 BZIP2=/bin/bzip2" would set values
-  for all but one program. "TZIP=" disables compression support and prevents
-  interactive execution. (NOTE: These values are not validated as they are in
-  the interactive query.)
+- "PREFIX=/installation/path" (for installation into a custom location),
+- "INSTALLDIRS=site" (for installation into site-specific Perl directories)
+- "INSTALLDIRS=perl" (for installation into standard Perl directories).
+
+You will be prompted for program locations. You can suppress these prompts by
+appending the path to one or more external programs to the "perl Makefile.PL"
+command. For example, "GREP=/gnu/bin/grep TZIP= GZIP=/gnu/bin/gzip
+BZIP=/bin/bzip2 BZIP2=/bin/bzip2" would set values for all but one program.
+"TZIP=" disables compression support and prevents interactive execution.
+(NOTE: These values are not validated as they are in the interactive query.)
 
 If you make the installation into your own directory, then remember that you
 must tell perl where to search for modules before trying to 'use' them. For
 example:
 
   use lib '/home/userid/lib';
-  use CGI::Cache;
+  use Mail::Mbox::MessageParser;
 
 If make test fails, please see the INSTALLATION PROBLEMS section below.
 
