@@ -16,7 +16,7 @@ use vars qw( @ISA $VERSION $DEBUG $MAX_TESTCHAR_BUFFER_SIZE %PROGRAMS
 
 @ISA = qw(Exporter);
 
-$VERSION = '1.21.1';
+$VERSION = '1.21.2';
 $DEBUG = 0;
 
 $MAX_TESTCHAR_BUFFER_SIZE = 1048576;
