@@ -10,7 +10,7 @@ use Carp;
 
 use vars qw( $VERSION $DEBUG $GREP_DATA );
 
-$VERSION = '1.5.0';
+$VERSION = '1.5.1';
 
 $GREP_DATA = {};
 
@@ -167,12 +167,23 @@ sub read_next_email
     last LOOK_FOR_NEXT_EMAIL
       if $GREP_DATA->{$self->{'file_name'}}{'validated'}[$self->{'email_number'}];
 
+    my $endline = $self->{'endline'};
+
     # Keep looking if the header we found is part of a "Begin Included
     # Message".
-    my $end_of_string = substr($email, -200);
-    my $endline = $self->{'endline'};
+    my $end_of_string = '';
+    my $backup_amount = 100;
+    do
+    {
+      $backup_amount *= 2;
+      $end_of_string = substr($email, -$backup_amount);
+    } while (index($end_of_string, "$endline$endline") == -1 &&
+      $backup_amount < $self->{'email_length'});
+
     if ($end_of_string =~
-        /$endline-----(?: Begin Included Message |Original Message)-----$endline[^\r\n]*(?:$endline)*$/i)
+        /$endline-----(?: Begin Included Message |Original Message)-----$endline[^\r\n]*(?:$endline)*$/i ||
+        $end_of_string =~
+          /$endline--[^\r\n]*${endline}Content-type:[^\r\n]*$endline$endline/i)
     {
       dprint "Incorrect start of email found--adjusting grep data";
 
